--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -14,7 +14,22 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="60dp"
         android:lineSpacingExtra="8sp"
-        android:text="We are team of three students who worked on this project. The project airms to detect medical emergency and report it to nearby hospital and doctors if available. This application is mainly made to reduce the patent processing time, identification and registeration etc. We hope that this application comes handy to users and can save lifes in future."
+        android:text="We are team of three students who worked on this project. The project aims to detect medical emergency and report it to nearby hospital and doctors if available. This application is mainly made to reduce the patent processing time, identification and registeration etc. We hope that this application comes handy to users and can save lifes in future."
+        android:textAlignment="center"
+        android:textStyle="bold|italic"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="306dp"
+        android:layout_height="287dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="208dp"
+        android:lineSpacingExtra="8sp"
+        android:text="\n\n\n Abhishek Singh Yadav \n Priyanka Sarangi \n Devang S Mistry"
         android:textAlignment="center"
         android:textStyle="bold|italic"
         app:layout_constraintLeft_toLeftOf="parent"
